--- a/MVP3_ML_&_Analytics_Douglas_da_Silva_Lima.ipynb
+++ b/MVP3_ML_&_Analytics_Douglas_da_Silva_Lima.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/DougRio/MVP3/blob/main/MVP3_ML_%26_Analytics_Douglas_da_Silva_Lima.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "f6dab859",
       "metadata": {
         "id": "f6dab859"
@@ -3587,7 +3597,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
